--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,9 @@ jobs:
       - name: Run linters
         run: nox -vs lint
       - name: Validate changelog
-        if: ${{ ! startsWith(github.ref, 'refs/heads/dependabot/') }}
-        uses: zattoo/changelog@2f5ee4e229269d2fe78f53c102fce1285065c6a4
+        # Library was designed to be used with pull requests only.
+        if: ${{ github.event_name == 'pull_request' && ! startsWith(github.ref, 'refs/heads/dependabot/') }}
+        uses: zattoo/changelog@v1
         with:
           token: ${{ github.token }}
   build:
