Left only the failing part of the test bundle

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,17 +77,4 @@ jobs:
           python -m pip install --upgrade nox pip setuptools
       - name: Bundle the distribution
         id: bundle
-        run: nox -vs bundle >> $GITHUB_OUTPUT
-      - name: Generate hashes
-        id: hashes
-        run: nox -vs make_dist_digest
-      - name: Run integration tests
-        if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
-        run: nox -vs integration -- --sut=${{ steps.bundle.outputs.sut_path }} --cleanup
-      - name: Upload assets
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          path: ${{ steps.bundle.outputs.asset_path }}
-          if-no-files-found: warn
-          retention-days: 7
+        run: nox -vs bundle
