Always print info

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         id: bundle
         run: SETUPTOOLS_SCM_DEBUG=1 nox -vs bundle
       - name: Info printing
+        if: failure()
         run: |
           git status
           git describe
