--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           apt-get -y update
           apt-get -y install patchelf
           python -m pip install --upgrade nox pip setuptools
+          git config --global --add safe.directory '*'
       - name: Bundle the distribution
         id: bundle
         run: SETUPTOOLS_SCM_DEBUG=1 nox -vs bundle
