--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,38 @@ jobs:
         id: bundle
         run: SETUPTOOLS_SCM_DEBUG=1 nox -vs bundle
       - name: Info printing
-        if: failure()
+        if: always()
         run: |
+          git --version
+          git status
+          git describe
+  test-macos-and-windows-bundle:
+    needs: cleanup_buckets
+    env:
+      B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
+      B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-11, windows-2019]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Set up Python ${{ env.PYTHON_DEFAULT_VERSION }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_DEFAULT_VERSION }}
+      - name: Install dependencies
+        run: python -m pip install --upgrade nox pip setuptools
+      - name: Bundle the distribution
+        id: bundle
+        shell: bash
+        run: nox -vs bundle
+      - name: Info printing
+        if: always()
+        run: |
+          git --version
           git status
           git describe
